--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@vercel/analytics": "^1.4.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
